2010-05-24  Darin Adler  <darin@apple.com>

        Reviewed by Eric Seidel.

        Move view-related functions from Frame to FrameView
        https://bugs.webkit.org/show_bug.cgi?id=39366

        * WebFrame.cpp:
        (wxWebFrame::CanIncreaseTextSize): Check FrameView is not null.
        (wxWebFrame::IncreaseTextSize): Call function on FrameView.
        (wxWebFrame::CanDecreaseTextSize): Ditto.
        (wxWebFrame::DecreaseTextSize): Ditto.
        (wxWebFrame::ResetTextSize): Ditto.

2010-05-11  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Load a blank page on creation to initialize WebCore objects properly.
        https://bugs.webkit.org/show_bug.cgi?id=38932

        * WebView.cpp:
        (wxWebView::Create):

2010-05-03  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Build and use Mac's ComplexTextController to support complex text in wx.
        https://bugs.webkit.org/show_bug.cgi?id=38482

        * WebView.cpp:
        (wxWebView::Create):
        * wscript:

2010-05-03  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Provide access to GrantUniversalAccess to allow enabling of XSS support.
        https://bugs.webkit.org/show_bug.cgi?id=38481

        * WebFrame.cpp:
        (wxWebFrame::GrantUniversalAccess):
        * WebFrame.h:
        * WebView.cpp:
        (wxWebView::GetParseMode):
        (wxWebView::GrantUniversalAccess):
        * WebView.h:

2010-05-03  Jens Alfke  <snej@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Add "willSendSubmitEvent" hook to WebFrameClient and FrameLoaderClient
        https://bugs.webkit.org/show_bug.cgi?id=38397

        No tests (functionality is exposed only through native WebKit API.)

        * WebKitSupport/FrameLoaderClientWx.h:
        (WebCore::FrameLoaderClientWx::dispatchWillSendSubmitEvent):

2010-04-25  Sam Weinig  <sam@webkit.org>
