@@ -331,7 +331,11 @@ bool wxWebView::Create(wxWindow* parent, int id, const wxPoint& position,
     WebCore::HTMLFrameOwnerElement* parentFrame = 0;
 
     WebCore::EditorClientWx* editorClient = new WebCore::EditorClientWx();
-    m_impl->page = new WebCore::Page(new WebCore::ChromeClientWx(this), new WebCore::ContextMenuClientWx(), editorClient, new WebCore::DragClientWx(), new WebCore::InspectorClientWx(), 0, 0);
+    m_impl->page = new WebCore::Page(new WebCore::ChromeClientWx(this), 
+                        new WebCore::ContextMenuClientWx(), 
+                        editorClient, 
+                        new WebCore::DragClientWx(), 
+                        new WebCore::InspectorClientWx(), 0, 0, 0);
     editorClient->setPage(m_impl->page);
     
     m_mainFrame = new wxWebFrame(this);
