@@ -1,3 +1,10 @@
+2010-05-26  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Build fix after new client added to Page constructor.
+
+        * WebView.cpp:
+        (wxWebView::Create):
+
 2010-05-24  Darin Adler  <darin@apple.com>
 
         Reviewed by Eric Seidel.
